deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nordnet-app
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nordnet-app
  template:
    metadata:
      labels:
        app: nordnet-app
    spec:
      containers:
      - image: emanzat/nordnet-app:1.0
        imagePullPolicy: Always
        name: hello-dep
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
