deployment-v2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nordnet-app-v2
  namespace: default
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nordnet-app-v2
  template:
    metadata:
      labels:
        app: nordnet-app-v2
    spec:
      containers:
      - image: emanzat/nordnet-app:2.0
        imagePullPolicy: Always
        name: hello-dep
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
             path: /
             port: 8080
