hello-world-se.yaml
apiVersion: v1
kind: Service 
metadata:
  name: helloworld-svc
  labels:
    app: helloworld
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30080
  selector:
    app: helloworld
