service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nordnet-app-service-v2
  namespace: default
spec:
  selector:
    app: nordnet-app-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31073
  type: NodePort
