ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: example-ingress
spec:
  rules:
  - host: web1.nordnet.fr
    http:
      paths:
      - backend:
          service:
            name: web1
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: web2.nordnet.com
    http:
      paths:
      - backend:
          service:
            name: web3
            port:
              number: 8081
        path: /
        pathType: Prefix
